Optimize SEO for brand terms 'Park Pro' and 'Park Pro Itineraries'
- Update title to include full brand name 'Park Pro Itineraries'
- Add brand keywords to meta description and keywords
- Update Open Graph and Twitter meta tags with brand names
- Add alternateName to structured data for both 'Park Pro' and 'Park Pro Itineraries'
- Optimize for brand recognition in search results

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Park Pro" />
-    <meta name="description" content="Stop spending hours on Disney itineraries. Park Pro creates personalized Disney World & Disneyland itineraries in 5 minutes for travel agents. Save 10+ hours per client, close 3x more bookings." />
-    <meta name="keywords" content="Disney planning software, travel agent tools, automated Disney itineraries, Disney World planning, Disneyland planning, travel agent software, Disney vacation planning, itinerary generator, travel booking tools, Disney crowd calendar, Disney wait times, Disney dining reservations" />
+    <meta name="description" content="Park Pro Itineraries - Automated Disney planning software for travel agents. Create personalized Disney World & Disneyland itineraries in 5 minutes. Save 10+ hours per client, close 3x more bookings with Park Pro." />
+    <meta name="keywords" content="Park Pro, Park Pro Itineraries, Disney planning software, travel agent tools, automated Disney itineraries, Disney World planning, Disneyland planning, travel agent software, Disney vacation planning, itinerary generator, travel booking tools, Disney crowd calendar, Disney wait times, Disney dining reservations" />
 
     <meta name="author" content="Park Pro" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
@@ -28,8 +28,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://parkproit.com/" />
-    <meta property="og:title" content="Park Pro - Stop Spending Hours on Disney Itineraries | Travel Agent Software" />
-    <meta property="og:description" content="Create personalized Disney World & Disneyland itineraries in 5 minutes. Save 10+ hours per client, close 3x more bookings. Built specifically for travel agents." />
+    <meta property="og:title" content="Park Pro Itineraries - Automated Disney Planning Software for Travel Agents" />
+    <meta property="og:description" content="Park Pro creates personalized Disney World & Disneyland itineraries in 5 minutes. Save 10+ hours per client, close 3x more bookings. Built specifically for travel agents." />
     <meta property="og:image" content="https://parkproit.com/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -40,8 +40,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://parkproit.com/" />
-    <meta property="twitter:title" content="Park Pro - Stop Spending Hours on Disney Itineraries | Travel Agent Software" />
-    <meta property="twitter:description" content="Create personalized Disney World & Disneyland itineraries in 5 minutes. Save 10+ hours per client, close 3x more bookings. Built specifically for travel agents." />
+    <meta property="twitter:title" content="Park Pro Itineraries - Automated Disney Planning Software for Travel Agents" />
+    <meta property="twitter:description" content="Park Pro creates personalized Disney World & Disneyland itineraries in 5 minutes. Save 10+ hours per client, close 3x more bookings. Built specifically for travel agents." />
     <meta property="twitter:image" content="https://parkproit.com/og-image.jpg" />
     <meta property="twitter:image:alt" content="Park Pro - Automated Disney Planning Software for Travel Agents" />
     <meta property="twitter:creator" content="@ParkProItineraries" />
@@ -72,8 +72,9 @@
     {
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
-      "name": "Park Pro",
-      "description": "Automated Disney planning platform for travel agents. Create personalized Disney World and Disneyland itineraries in 5 minutes, saving 10+ hours per client.",
+      "name": "Park Pro Itineraries",
+      "alternateName": "Park Pro",
+      "description": "Park Pro Itineraries - Automated Disney planning platform for travel agents. Create personalized Disney World and Disneyland itineraries in 5 minutes, saving 10+ hours per client.",
       "url": "https://parkproit.com",
       "applicationCategory": "TravelApplication",
       "operatingSystem": "Web",
@@ -94,7 +95,8 @@
       },
       "provider": {
         "@type": "Organization",
-        "name": "Park Pro",
+        "name": "Park Pro Itineraries",
+        "alternateName": "Park Pro",
         "url": "https://parkproit.com",
         "logo": "https://parkproit.com/logo.png",
         "contactPoint": {
@@ -125,10 +127,11 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "Park Pro",
+      "name": "Park Pro Itineraries",
+      "alternateName": "Park Pro",
       "url": "https://parkproit.com",
       "logo": "https://parkproit.com/logo.png",
-      "description": "Leading provider of automated Disney planning software for travel agents",
+      "description": "Park Pro Itineraries - Leading provider of automated Disney planning software for travel agents",
       "foundingDate": "2024",
       "contactPoint": {
         "@type": "ContactPoint",
@@ -147,9 +150,10 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "Park Pro",
+      "name": "Park Pro Itineraries",
+      "alternateName": "Park Pro",
       "url": "https://parkproit.com",
-      "description": "Automated Disney planning software for travel agents",
+      "description": "Park Pro Itineraries - Automated Disney planning software for travel agents",
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://parkproit.com/search?q={search_term_string}",
@@ -158,7 +162,7 @@
     }
     </script>
 
-    <title>Park Pro - Stop Spending Hours on Disney Itineraries | Travel Agent Software</title>
+    <title>Park Pro Itineraries - Automated Disney Planning Software for Travel Agents</title>
   </head>
   <body style="margin: 0; font-family: 'Inter', sans-serif;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
