feat: comprehensive SEO upgrade and sitemap optimization
SEO Component Enhancements:
- Add schemaType prop to SEO component for flexible JSON-LD schema control
- Separate SEOConfigs into dedicated file (SEOConfigs.js) for Fast Refresh compatibility
- Update JSON-LD @type logic: schemaType > Article (if type=article) > WebPage
- Update all SEOConfigs with optimized titles, descriptions, and keywords targeting:
  - 'travel agent itinerary software/tool'
  - 'Disney travel agent software'
  - Branded searches (ParkPro, Park Pro)

New SEO Hub Pages:
- Add /travel-agent-itinerary-software page
- Add /disney-travel-agent-software page
- Add /travel-agent-workflow-software page
- Add /travel-agency-software page
- All pages include proper SEO components, H1s, content sections, and CTAs
- All use SoftwareApplication schema type

Sitemap Improvements:
- Update sitemap.xml with all current marketing pages
- Remove unused XML namespaces (image, news)
- Update all lastmod dates to 2025-01-15
- Ensure all URLs use https://parkproit.com (non-www) consistently
- Add 4 new SEO hub pages to sitemap
- Verify all sitemap URLs resolve to real pages (no 404s)

Routing Updates:
- Add routes for 4 new SEO hub pages in App.jsx
- Add redirect from /why-parkpro to /comparison
- Update all pages to use SEO component with schemaType prop

Page Updates:
- Update all marketing pages (Home, Pricing, Features, Solutions, etc.) to use new SEO component
- Add schemaType='SoftwareApplication' to product pages
- Add schemaType='WebPage' to informational pages (FAQ, Comparison, Request Access)

Design System Migration:
- Migrate from TypeScript design components to JavaScript
- Update Button and Card components
- Remove old TypeScript design files
- Add design-system documentation

Other Improvements:
- Update various page components for consistency
- Improve accessibility and component structure
- Update pricing configuration
- Clean up unused files (DemoItinerary.jsx)

All changes maintain backwards 

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
     <!-- Fonts - Optimized for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Preload critical fonts for hero section (LCP optimization) -->
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Urbanist:wght@700;800&display=swap">
+    <!-- Load fonts asynchronously to avoid blocking render -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Urbanist:wght@400;500;600;700;800&family=DM+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Urbanist:wght@400;500;600;700;800&family=DM+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet"></noscript>
 
